# mail-cpp-hw-2

./: .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: cppcheck.yml  publish.yml
project/: CMakeLists.txt
project/include/: array.h  comb_sort.h  merge_sort.h  utils.h
project/src/: array.c  comb_sort.c  main.c  merge_sort.c
project/tests/: CMakeLists.txt
project/tests/data/compare/test1/: in.txt  out.txt
project/tests/include/: tools.h
project/tests/src/: tests_compare.cpp  tests_parallel.cpp  tests_successive.cpp
